# RabbitHole

./: .gitignore  .gitmodules  Build.sh  CMakeCache.txt  CMakeCommon.cmake  CMakeLists.txt  CmakeLists.txt  LICENSE  RunTesting.sh  Setup.sh  requirements.txt
src/app/: CMakeLists.txt  CmakeLists.txt
src/app/.proto/: dummy.grpc.pb.cc  dummy.grpc.pb.h  dummy.pb.cc  dummy.pb.h  dummy.proto
src/app/includes/: FloorGridRenderer.h  OpaqueRenderer.h  RenderSystem.h  RenderTarget.h  Texture.h  application.h  application.hpp  render_context.h  renderer.h  simple_rendering.h  window.h
src/app/includes/Core/: Camera.hpp  CameraSystem.h  CameraSystem.hpp  GenericInstanceWrapper.hpp  GeometryLoaderSystem.h  GeometryLoaderSystem.hpp  IBaseObject.hpp  InputSystem.hpp  Light.hpp  MeshObject.hpp  Scene.hpp  Utils.hpp
src/app/includes/Core/Components/: CameraComponent.h  DirectionalLightComponent.hpp  InputComponent.h  MeshComponent.hpp  SceneComponent.h  SceneComponent.hpp  TransformComponent.h  TransformComponent.hpp  UserInterfaceComponent.h
src/app/includes/RenderGraph/: GraphBuilder.h  RenderGraph.h
src/app/includes/RenderPass/: OpaqueRenderPass.h  OpaqueRenderer.h  RenderPass.h
src/app/includes/Renderer/: Buffer.h  Buffer.hpp  CommandBuffer.h  CommandBuffer.hpp  CommandBufferManager.h  CommandPool.h  CommandPool.hpp  Fence.h  Fence.hpp  GPUDefinitions.h  RenderSystem.h  RenderSystem.hpp  RenderTarget.h  RenderTarget.hpp  ShaderCompiler.hpp  Surface.hpp  Swapchain.h  Swapchain.hpp  Texture.h  Texture.hpp  VulkanLoader.h  VulkanTranslator.hpp  render_context.h  render_context.hpp
src/app/includes/Renderer/Interfaces/: RenderTargetInterface.h  RenderTargetInterface.hpp  TextureInterface.h  TextureInterface.hpp
src/app/includes/Renderer/RenderGraph/: GraphBuilder.h  GraphBuilder.hpp  RenderGraph.h  RenderGraph.hpp
src/app/includes/Renderer/RenderPass/: FloorGridRenderPass.h  FullScreenQuadRenderPass.h  FullScreenQuadRenderPass.hpp  OpaqueRenderPass.h  RenderPass.h  RenderPass.hpp  RenderPassExecutor.hpp  RenderPassGenerator.hpp
src/app/includes/UI/: UISystem.h  UISystem.hpp
src/app/shaders/: dummy.frag  dummy.vert  floor_grid.frag  floor_grid.vert
src/app/shaders/bytecode/: dummy_fs.spv  dummy_vs.spv  floor_grid_fs.spv  floor_grid_vs.spv  fullScreenQuadShader.spv  fullScreenQuadShader_vs.spv
src/app/src/: FloorGridRenderer.cpp  OpaqueRenderer.cpp  RenderSystem.cpp  RenderTarget.cpp  Texture.cpp  application.cpp  main.cpp  render_context.cpp  renderer.cpp  simple_rendering.cpp  window.cpp
src/app/src/Core/: Camera.cpp  CameraSystem.cpp  GeometryLoaderSystem.cpp  InputSystem.cpp  MeshObject.cpp  Scene.cpp
src/app/src/Renderer/: Buffer.cpp  CommandBuffer.cpp  CommandBufferManager.cpp  CommandPool.cpp  Fence.cpp  FloorGridRenderer.cpp  OpaqueRenderPass.cpp  OpaqueRenderPass.h  OpaqueRenderer.cpp  RenderSystem.cpp  RenderTarget.cpp  ShaderCompiler.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  VulkanLoader.cpp  render_context.cpp
src/app/src/Renderer/RenderGraph/: GraphBuilder.cpp  GraphBuilder.h  RenderGraph.cpp  RenderGraph.h
src/app/src/Renderer/RenderPass/: FloorGridRenderPass.cpp  FloorGridRenderer.cpp  FullScreenQuadRenderPass.cpp  OpaqueRenderPass.cpp  OpaqueRenderer.cpp  RenderPass.cpp  (+2 more)
src/app/src/UI/: UISystem.cpp
src/application/: CMakeLists.txt
src/application/src/: main.cpp
src/engine/: CMakeLists.txt  CMakeSources.cmake
src/engine/includes/: application.hpp  window.hpp
src/engine/includes/Components/: CameraComponent.hpp  Common.hpp  DirectionalLightComponent.hpp  GPUBufferComponent.hpp  GridMaterialComponent.hpp  InputComponent.hpp  MatCapMaterialComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  PhongMaterialComponent.hpp  PrimitiveComponent.hpp  PrimitiveProxyComponent.hpp  TransformComponent.hpp
src/engine/includes/Core/: Camera.hpp  CameraSystem.hpp  GenericFactory.hpp  GeometryLoaderSystem.hpp  IBaseObject.hpp  InputSystem.hpp  Light.hpp  MeshObject.hpp  Scene.hpp  Utils.hpp
src/engine/includes/Renderer/: BlitCommandEncoder.hpp  Buffer.hpp  CommandBuffer.hpp  CommandEncoder.hpp  CommandQueue.hpp  Device.hpp  Event.hpp  Fence.hpp  FrameResources.hpp  GPUDefinitions.h  GraphBuilder.hpp  GraphicsContext.hpp  GraphicsPipeline.hpp  Material.hpp  RenderPass.hpp  RenderSystemV2.hpp  RenderTarget.hpp  Shader.hpp  ShaderCompiler.hpp  ShaderSet.hpp  Surface.hpp  Swapchain.hpp  SwapchainV2.hpp  Texture.hpp  Texture2D.hpp  TextureResource.hpp  TextureView.hpp  TransferContext.hpp  VulkanLoader.hpp  VulkanTranslator.hpp  render_context.hpp
src/engine/includes/UI/: UISystem.hpp
src/engine/shaders/: dummy.frag  dummy.vert  floor_grid.frag  floor_grid.vert  fullScreenQuadShader.vert  matcap.frag  matcap.vert
src/engine/shaders/bytecode/: dummy_frag.spv  dummy_vert.spv  floor_grid_frag.spv  floor_grid_fs.spv  floor_grid_vert.spv  floor_grid_vs.spv  fullScreenQuadShader_frag.spv  fullScreenQuadShader_vert.spv  matcap_frag.spv  matcap_vert.spv
src/engine/shaders/glsl/: dummy.frag  dummy.vert  floor_grid.frag  floor_grid.vert  fullScreenQuadShader.frag  matcap.frag  matcap.vert
src/engine/shaders/wgsl/: fragment_floor_grid.wgsl  fragment_matcap.wgsl  vertex_floor_grid.wgsl  vertex_matcap.wgsl
src/engine/src/: application.cpp  window.cpp
src/engine/src/Core/: CameraSystem.cpp  GenericFactory.cpp  GeometryLoaderSystem.cpp  InputSystem.cpp  Light.cpp  MeshObject.cpp  Scene.cpp
src/engine/src/Renderer/: BlitCommandEncoder.cpp  Buffer.cpp  CommandBuffer.cpp  CommandEncoder.cpp  CommandQueue.cpp  Device.cpp  Event.cpp  Fence.cpp  FrameResources.cpp  GraphBuilder.cpp  GraphicsContext.cpp  GraphicsPipeline.cpp  Material.cpp  RenderCommandEncoder.cpp  RenderPass.cpp  RenderSystemV2.cpp  RenderTarget.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderSet.cpp  Surface.cpp  Swapchain.cpp  SwapchainV2.cpp  Texture.cpp  Texture2D.cpp  TextureResource.cpp  TextureView.cpp  TransferContext.cpp  VulkanLoader.cpp  render_context.cpp
src/engine/src/UI/: UISystem.cpp
src/tests/: CMakeLists.txt
src/tests/src/: cache.cpp  dag.cpp  main.cpp  renderGraph.cpp
(+91 files in other folders)
